<resources>
    <string name="app_name">WanAndroidClient</string>
    <string name="version_code">%1$s\n%2$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- home -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Knowledge</string>
    <string name="hot_title">Hot</string>
    <!--no data-->
    <string name="no_data">Here the empty…</string>
    <string name="get_data_error">Failed to get the data</string>
    <string name="get_data_zero">Get data size is zero</string>

    <string name="double_click_exit">Again according to the exit</string>

    <!-- search -->
    <string name="search_title">Search</string>
    <string name="search_failed_not_article">Not to search keywords relevant articles</string>
    <string name="search_not_empty">Search keywords can\'t for empty</string>
    <!-- share -->
    <string name="share_title">Share</string>
    <string name="share_type_title">Share Project</string>
    <string name="share_article_url">%1$s Share【%2$s】：%3$s</string>
    <string name="share_type_url">%1$s Share【%2$s】Project：http://www.wanandroid.com/article/list/0?cid=%3$d</string>
    <!-- bookmark -->
    <string name="like_title">Like</string>
    <string name="bookmark_time">Collection time：%1$s</string>
    <string name="bookmark_success">Collection of success</string>
    <string name="bookmark_failed">Collection of failure：%1$s</string>
    <string name="bookmark_cancel_success">Cancel the collection success</string>
    <string name="bookmark_cancel_failed">Cancel the collection failure：%1$s</string>

    <!-- login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirm(Register)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="password_confirm_not_empty">Confirm password cannot be empty.</string>
    <string name="password_confirm_diff">Confirm password is not the same.</string>
    <string name="password_not_empty">Password cannot be empty.</string>
    <string name="password_length_short">Password length can not less than six.</string>
    <string name="username_not_empty">Username cannot be empty.</string>
    <string name="logout">Logout</string>
    <string name="login_success">Login success</string>
    <string name="register_success">Register success</string>
    <string name="login_please_login">Please login first…</string>
    <string name="not_login">Not logged in</string>
    <string name="goto_login">Click login</string>

    <!-- article -->
    <string name="loading">Loading…</string>
    <string name="browser_title">Use system browser open</string>
    <string name="hot_key">Hot Search</string>
    <string name="common_use">Commonly Site</string>

    <!-- navigation -->
    <string name="my_bookmark">My Bookmark</string>
    <string name="my_like">My favorite</string>
    <string name="my_about">About us</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/wangzailfm/wanandroidclient" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="outside_title">To stand outside article</string>
    <string name="type_null">Category is empty</string>
</resources>