<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuShare"
        android:orderInCategory="100"
        android:title="@string/share_title"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuLike"
        android:orderInCategory="100"
        android:title="@string/like_title"
        android:icon="@drawable/ic_action_white_like"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuBrowser"
        android:orderInCategory="100"
        android:title="@string/browser_title"
        android:icon="@drawable/ic_action_browser"
        app:showAsAction="never" />
</menu>